PLFM-7874: Minor refactoring